--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,21 @@
 <body>
   <h1>Dundertext</h1>
   <p id="output"></p>
+
+  <div id="videos">
+    <section class="active">
+      <h3>example.mp4</h3>
+      <div style="position: relative;">
+        <video src="videos/example.webm" width="640px" height="360px"></video>
+        <svg width="640px" height="360px" viewBox="0 0 1280 720" style="position: absolute; top: 0px; left: 0px;">
+        </svg>
+      </div>
+      <div>
+        <time>0:00.0</time>
+      </div>
+    </section>
+  </div>
+
   <script type="text/javascript" src="./target/ui-opt.js"></script>
   <script type="text/javascript">
     dundertext.ui.DundertextJsApp().main();
