--- a/ui/index.html
+++ b/ui/index.html
@@ -21,8 +21,12 @@
       </div>
     </section>
   </div>
+  <pre id="editor">
 
-  <script type="text/javascript" src="./target/ui-opt.js"></script>
+  </pre>
+
+  <!--<script type="text/javascript" src="./target/ui-opt.js"></script>-->
+  <script type="text/javascript" src="./target/ui-fastopt.js"></script>
   <script type="text/javascript">
     dundertext.ui.DundertextJsApp().main();
   </script>
