--- a/ui/index.html
+++ b/ui/index.html
@@ -25,8 +25,8 @@
 
   </pre>
 
-  <!--<script type="text/javascript" src="./target/ui-opt.js"></script>-->
-  <script type="text/javascript" src="./target/ui-fastopt.js"></script>
+  <script type="text/javascript" src="./target/ui-opt.js"></script>
+  <!--<script type="text/javascript" src="./target/ui-fastopt.js"></script>-->
   <script type="text/javascript">
     dundertext.ui.DundertextJsApp().main();
   </script>
