--- a/ui/src/main/webapp/index.html
+++ b/ui/src/main/webapp/index.html
@@ -4,8 +4,8 @@
   <title>Dundertext</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script type="text/javascript" src="../../../target/ui-opt.js"></script>
-  <!--<script type="text/javascript" src="./target/ui-fastopt.js"></script>-->
+  <!--<script type="text/javascript" src="../../../target/ui-opt.js"></script>-->
+  <script type="text/javascript" src="../../../target/ui-fastopt.js"></script>
 </head>
 <body>
     <script type="text/javascript">dundertext.ui.DundertextJsApp().main();</script>
