Add nginx conf to simplify dev

--- a/ui/src/main/webapp/dev.html
+++ b/ui/src/main/webapp/dev.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dundertext</title>
+  <title>Dundertext DEV</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script type="text/javascript" src="js/ui-opt.js"></script>
+  <script type="text/javascript" src="js/ui-fastopt.js"></script>
 </head>
 <body>
     <script type="text/javascript">dundertext.ui.DundertextJsApp().main();</script>
